<resources>
    <string name="app_name">Origami XR</string>
    <string name="sub_title">Learning Origami,\n Made Better!</string>
    <string name="get_started">Get Started</string>

    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="Gallery">Gallery</string>

    <string name="username">Hi John!</string>

    <string name="gallery_name_1">Yan Wang</string>
    <string name="gallery_name_2">Quinn Morris</string>
    <string name="gallery_name_3">Rijuta Dighe</string>
    <string name="gallery_name_4">Lucian Lum</string>
    <string name="gallery_name_5">Wallace Loh</string>
    <string name="get_started">Get Started</string>
</resources>
