<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/gallery_container">

            <!--Start of USER'S image in gallery-->
            <!--WILL BE VISIBLE ONCE USER POSTS-->

            <RelativeLayout
                android:id="@+id/gallery_user_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/gallery_header_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/gallery_image_user"
                    android:layout_alignEnd="@+id/gallery_image_user"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image_user"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_profile_pic"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/username_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/profile_image_user"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gallery_name_1"
                        android:textColor="@android:color/black"
                        android:textSize="8.5pt" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gallery_image_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_header_user"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gallery_image_1" />
            </RelativeLayout>

            <!--End of USER'S image in gallery-->
            <!--WILL BE VISIBLE ONCE USER POSTS-->

            <!--Start of first image in gallery-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/gallery_header_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/gallery_image_1"
                    android:layout_alignEnd="@+id/gallery_image_1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image_1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_profile_pic"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/username_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/profile_image_1"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gallery_name_1"
                        android:textColor="@android:color/black"
                        android:textSize="8.5pt" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/gallery_image_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_header_1"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gallery_image_1" />
            </RelativeLayout>

            <!--End of first image in gallery-->

            <!--Start of second image in gallery-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/gallery_header_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/gallery_image_2"
                    android:layout_alignEnd="@+id/gallery_image_2"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image_2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_profile_pic"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/username_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/profile_image_2"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gallery_name_2"
                        android:textColor="@android:color/black"
                        android:textSize="8.5pt" />
                </RelativeLayout>

                <!--TODO Change src-->

                <ImageView
                    android:id="@+id/gallery_image_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_header_2"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gallery_image_2" />
            </RelativeLayout>

            <!--End of second image in gallery-->

            <!--Start of the third image in gallery-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/gallery_header_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/gallery_image_3"
                    android:layout_alignEnd="@+id/gallery_image_3"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image_3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_profile_pic"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/username_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/profile_image_3"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gallery_name_3"
                        android:textColor="@android:color/black"
                        android:textSize="8.5pt" />
                </RelativeLayout>

                <!--TODO Change src-->

                <ImageView
                    android:id="@+id/gallery_image_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_header_3"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gallery_image_3" />
            </RelativeLayout>

            <!--End of the third image in gallery-->

            <!--Start of the fourth image in gallery-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/gallery_header_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/gallery_image_4"
                    android:layout_alignEnd="@+id/gallery_image_4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image_4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_profile_pic"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/username_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/profile_image_4"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gallery_name_4"
                        android:textColor="@android:color/black"
                        android:textSize="8.5pt" />
                </RelativeLayout>

                <!--TODO Change src-->

                <ImageView
                    android:id="@+id/gallery_image_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_header_4"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gallery_image_4" />
            </RelativeLayout>

            <!--End of the fourth image in gallery-->

            <!--Start of the fifth image in gallery-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/gallery_header_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/gallery_image_5"
                    android:layout_alignEnd="@+id/gallery_image_5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image_5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="12dp"
                        android:src="@drawable/ic_profile_pic"
                        android:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/username_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toRightOf="@+id/profile_image_5"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gallery_name_5"
                        android:textColor="@android:color/black"
                        android:textSize="8.5pt" />
                </RelativeLayout>

                <!--TODO Change src-->

                <ImageView
                    android:id="@+id/gallery_image_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gallery_header_5"
                    android:layout_centerInParent="true"
                    android:src="@drawable/gallery_image_5" />
            </RelativeLayout>

            <!--End of the fifth image in gallery-->

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_plus"
        app:layout_anchor="@id/scroll_view"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout >